# FDsploit

./: README.md  fdsploit.py  pyproject.toml  requirements.txt
core/: banners.py  colors.py  lfishells.py  menu.py  utils.py  validations.py
